# code-unza25-csc4792-project_team_16-repository

./: .gitignore  DEMO_README.md  Makefile  README.md  TECHNICAL_REPORT.md  app.py  pyproject.toml  requirements.txt  run_demo.py  test_demo.py
data/interim/: .gitkeep
data/processed/: .gitkeep
data/raw/: .gitkeep
docs/: BU.md  DE.md  DP.md  DU.md  EV.md  MO.md  PARLIAMENTARY_DEBATE_ANALYSIS_REPORT.md
experiments/runs/: .gitkeep
notebooks/: code-unza25-csc4792-project_team_16-notebook.ipynb
reports/: .gitkeep
reports/figs/: metrics_comparison.csv
src/: __init__.py
src/app/: __init__.py  cli.py
src/eval/: __init__.py  report.py
src/features/: __init__.py
src/label/: __init__.py  auto_annotate.py  make_seed.py
src/models/: __init__.py  train_baselines.py  train_bert.py  train_sentence_transformer.py
src/parse/: __init__.py  segment.py  split_data.py
src/scrape/: __init__.py  fetch_order_papers.py  fetch_sittings.py
templates/: index.html
